@@ -1,6 +1,6 @@
 
-R version 2.14.0 Under development (unstable) (2011-04-10 r55401)
-Copyright (C) 2011 The R Foundation for Statistical Computing
+R version 2.15.0 (2012-03-30)
+Copyright (C) 2012 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 Platform: x86_64-unknown-linux-gnu (64-bit)
 
@@ -210,3 +210,15 @@ meal.cal  -0.00024     1.000 0.000302 -0.794 0.4300
 Likelihood ratio test=30.6  on 7 df, p=7.38e-05  n= 167, number of events= 120 
    (61 observations deleted due to missingness)
 > 
+> #
+> # Tests of using "."
+> #
+> fit1 <- coxph(Surv(time, status) ~ . - meal.cal - wt.loss - inst, lung)
+> fit2 <- update(fit1, .~. - ph.karno)
+> fit3 <- coxph(Surv(time, status) ~ age + sex + ph.ecog + pat.karno, lung)
+> all.equal(fit2, fit3)
+[1] TRUE
+> 
+> proc.time()
+   user  system elapsed 
+  0.412   0.076   0.526 
